--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,7 +31,7 @@ section#telefone {
     height: 627px;
     width: 311px;
     background-color: blue;
-    background: url('../imagens/frame-iphone.png') no-repeat    ;
+    background: url('../imagens/frame-iphone.png') no-repeat;
 }
 
 iframe#tela {
@@ -48,6 +48,7 @@ section#sociais img {
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.384);
     box-sizing: border-box;
+    margin-left: 60px;
 }
 
 section#sociais {
